[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scripts/LobbyStatus.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.364706, 0.364706, 0.364706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.321569, 0.321569, 0.321569, 1 )
corner_radius_top_right = 4
corner_radius_bottom_right = 30
corner_radius_bottom_left = 4
corner_detail = 1

[node name="LobbyStatus" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 410.0
margin_bottom = 560.0
rect_min_size = Vector2( 300, 200 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
margin_right = 250.0
margin_bottom = 29.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusIcon" type="Control" parent="Control"]
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.028
anchor_bottom = 0.049
margin_left = -0.0799999
margin_top = 0.28
margin_right = 9.68
margin_bottom = 10.31
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/StatusIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Control/StatusIcon" to="." method="_on_StatusIcon_mouse_entered"]
[connection signal="mouse_exited" from="Control/StatusIcon" to="." method="_on_StatusIcon_mouse_exited"]
